live change testing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Main content -->
     <div class="main-container">
-      <h1>Testing github page live change</h1>
+      <h1 class="bg-red-400 text-blue-400">Testing github page live change</h1>
     </div>
 
     <!-- scripts -->
