--- a/index.html
+++ b/index.html
@@ -4,21 +4,209 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <link rel="stylesheet" href="./assets/styles/output/main.css" />
     <title>Tailwind-task: Given by Shamim vai</title>
   </head>
-  <body class="dark:bg-black">
+  <body class="bg-[#f5f6fa] dark:bg-black mb-16">
     <!-- Theme color change -->
     <div
-      class="absolute top-4 right-8 flex space-x-3 bg-[#5459b7] px-2 rounded-full py-1"
+      class="absolute top-4 right-8 flex space-x-3 bg-blue-primary px-2 rounded-full py-1"
     >
       <button id="light">🌞</button>
       <button id="dark">🌛</button>
     </div>
 
     <!-- Main content -->
-    <div class="main-container">
-      <h1 class="bg-red-400 text-blue-400">Testing github page live change</h1>
+    <div class="main-container h-screen">
+      <!--main comments -->
+      <div class="w-full lg:w-3/6 mx-auto mt-20 px-2 lg:px-0">
+        <!-- card 1 -->
+        <div
+          class="card-one bg-white shadow rounded-lg p-5 pb-8 grid grid-cols-12"
+        >
+          <div class="col-span-1">
+            <div
+              class="w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+            >
+              <span class="font-semibold text-gray-400 text-sm">+</span>
+              <span class="text-blue-primary font-semibold text-sm">12</span>
+              <span class="font-semibold text-gray-400 text-xl leading-5"
+                >-</span
+              >
+            </div>
+          </div>
+          <div class="col-span-11">
+            <div class="ml-4 flex justify-between items-center">
+              <div class="flex items-center space-x-2.5">
+                <img
+                  src="./assets/images/amy.PNG"
+                  alt="amy"
+                  class="w-8 h-8 rounded-full object-cover"
+                />
+                <h3 class="font-semibold text-black-secondary text-sm">
+                  amyrobson
+                </h3>
+                <p class="text-gray-primary text-sm">1 month ago</p>
+              </div>
+              <div class="flex items-center space-x-2">
+                <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
+                <p class="font-medium text-blue-primary text-sm">Reply</p>
+              </div>
+            </div>
+            <p class="ml-4 text-gray-primary text-sm mt-3">
+              Impressive! Though it seems the drag feature could be improved.
+              But overall it looks incredible. You've nailed the design and the
+              responsiveness at various breakpoints works really well.
+            </p>
+          </div>
+        </div>
+        <!-- card 2 -->
+        <div
+          class="card-two bg-white shadow rounded-lg p-5 pb-8 grid grid-cols-12 mt-4"
+        >
+          <div class="col-span-1">
+            <div
+              class="w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+            >
+              <span class="font-semibold text-gray-400 text-sm">+</span>
+              <span class="text-blue-primary font-semibold text-sm">5</span>
+              <span class="font-semibold text-gray-400 text-xl leading-5"
+                >-</span
+              >
+            </div>
+          </div>
+          <div class="col-span-11">
+            <div class="ml-4 flex justify-between items-center">
+              <div class="flex items-center space-x-2.5">
+                <img
+                  src="./assets/images/max.PNG"
+                  alt="amy"
+                  class="w-7 h-7 rounded-full object-cover"
+                />
+                <h3 class="font-semibold text-black-secondary text-sm">
+                  maxblagun
+                </h3>
+                <p class="text-gray-primary text-sm">2 weeks ago</p>
+              </div>
+              <div class="flex items-center space-x-2">
+                <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
+                <p class="font-medium text-blue-primary text-sm">Reply</p>
+              </div>
+            </div>
+            <p class="ml-4 text-gray-primary text-sm mt-3">
+              Woah, your project looks awesome! How long have you been coding
+              for? I'm still new, but think I want to dive into React as well
+              soon. Perhaps you can give me an insight on where I can learn
+              React? Thanks!
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Replies -->
+      <div class="w-full lg:w-3/6 mx-auto mt-4 px-2 lg:px-0">
+        <!-- reply card 1 -->
+        <div
+          class="card-one bg-white shadow rounded-lg p-5 pb-8 grid grid-cols-12 w-5/6 ml-auto"
+        >
+          <div class="col-span-1">
+            <div
+              class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+            >
+              <span class="font-semibold text-gray-400 text-sm">+</span>
+              <span class="text-blue-primary font-semibold text-sm">4</span>
+              <span class="font-semibold text-gray-400 text-xl leading-5"
+                >-</span
+              >
+            </div>
+          </div>
+          <div class="col-span-11">
+            <div class="ml-4 flex justify-between items-center">
+              <div class="flex items-center space-x-2.5">
+                <img
+                  src="./assets/images/ram.PNG"
+                  alt="amy"
+                  class="w-8 h-8 rounded-full object-cover"
+                />
+                <h3 class="font-semibold text-black-secondary text-sm">
+                  ramsesmiron
+                </h3>
+                <p class="text-gray-primary text-sm">1 week ago</p>
+              </div>
+              <div class="flex items-center space-x-2">
+                <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
+                <p class="font-medium text-blue-primary text-sm">Reply</p>
+              </div>
+            </div>
+            <p class="ml-4 text-gray-primary text-sm mt-3">
+              <span class="text-sm text-blue-primary font-semibold"
+                >@maxblagun</span
+              >
+              If you're still new, I'd recommend focusing on the fundamentals of
+              HTML, CSS, and JS before considering React. It's very tempting to
+              jump ahead but lay a solid foundation first.
+            </p>
+          </div>
+        </div>
+        <!-- reply card 2 -->
+        <div
+          class="card-two bg-white shadow rounded-lg p-5 pb-8 grid grid-cols-12 mt-4 w-5/6 ml-auto"
+        >
+          <div class="col-span-1">
+            <div
+              class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+            >
+              <span class="font-semibold text-gray-400 text-sm">+</span>
+              <span class="text-blue-primary font-semibold text-sm">2</span>
+              <span class="font-semibold text-gray-400 text-xl leading-5"
+                >-</span
+              >
+            </div>
+          </div>
+          <div class="col-span-11">
+            <div class="ml-4 flex justify-between items-center">
+              <div class="flex items-center space-x-2.5">
+                <img
+                  src="./assets/images/max.PNG"
+                  alt="amy"
+                  class="w-7 h-7 rounded-full object-cover"
+                />
+                <h3 class="font-semibold text-black-secondary text-sm">
+                  juliusomo
+                </h3>
+                <p class="text-white bg-blue-primary py-0 px-2.5 text-sm">
+                  you
+                </p>
+                <p class="text-gray-primary text-sm">2 days ago</p>
+              </div>
+              <div class="flex items-center space-x-6">
+                <div class="flex items-center space-x-1">
+                  <i class="fa fa-solid fa-trash text-red-500 text-sm"></i>
+                  <p class="font-medium text-sm text-red-500">Delete</p>
+                </div>
+                <div class="flex items-center space-x-1">
+                  <i
+                    class="fa fa-solid fa-pencil text-blue-primary text-sm"
+                  ></i>
+                  <p class="font-medium text-sm text-blue-primary">Edit</p>
+                </div>
+              </div>
+            </div>
+            <p class="ml-4 text-gray-primary text-sm mt-3">
+              <span class="text-sm text-blue-primary font-semibold"
+                >@ramsesmiron</span
+              >
+              I couldn't agree more with this. Everything moves so fast and it
+              always seems like everyone knows the newest library/ framework.
+              But the fundamentals are what stay constant.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- scripts -->
