--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="ml-4 flex justify-between items-center">
               <div class="flex items-center space-x-2.5">
                 <img
-                  src="./assets/images/max.PNG"
+                  src="./assets/images/juli.PNG"
                   alt="amy"
                   class="w-7 h-7 rounded-full object-cover"
                 />
