commentbox added without placeholder

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <!-- comment box-->
       <div class="w-full lg:w-3/6 mx-auto mt-4 px-2 lg:px-0">
         <div
-          class="comment-box bg-white shadow rounded-lg p-5 pb-5 flex justify-between items-start"
+          class="comment-box bg-white shadow rounded-lg p-5 pb-5 flex space-x-2"
         >
           <img
             src="./assets/images/juli.PNG"
@@ -228,7 +228,7 @@
           />
           <textarea
             name="comment"
-            class="block w-full mx-4 py-1 px-2 text-sm border border-gray-200 rounded-lg bg-white focus:outline-none resize-none text-gray-primary"
+            class="block w-full mx-4 py-1 px-2 ps-10 text-sm border border-gray-200 rounded-lg bg-white focus:outline-none resize-none text-gray-primary"
             draggable="false"
             rows="4"
             placeholder="Add a comment..."
@@ -237,7 +237,7 @@
 
           <button
             type="button"
-            class="text-white bg-blue-primary text-xs font-semibold py-2 px-4 rounded-md"
+            class="text-white bg-blue-primary text-xs font-semibold py-2 px-4 h-8 rounded-md"
           >
             SEND
           </button>
