--- a/index.html
+++ b/index.html
@@ -227,13 +227,9 @@
             class="w-9 h-9 rounded-full object-cover"
           />
           <textarea
-            name="comment"
-            class="block w-full mx-4 py-1 px-2 ps-10 text-sm border border-gray-200 rounded-lg bg-white focus:outline-none resize-none text-gray-primary"
-            draggable="false"
-            rows="4"
+            class="h-20 resize-none focus:outline-none w-full border-2 border-gray-100 border-opacity-90 px-2 pt-1 text-sm text-gray-primary rounded-md"
             placeholder="Add a comment..."
-          >
-          </textarea>
+          ></textarea>
 
           <button
             type="button"
