--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
                 <h3 class="font-semibold text-black-secondary text-sm">
                   juliusomo
                 </h3>
-                <p class="text-white bg-blue-primary py-0 px-2.5 text-sm">
+                <p
+                  class="text-white rounded-sm bg-blue-primary py-0 px-2.5 text-sm"
+                >
                   you
                 </p>
                 <p class="text-gray-primary text-sm">2 days ago</p>
