--- a/index.html
+++ b/index.html
@@ -109,112 +109,114 @@
       </div>
       <!-- Replies -->
       <div class="w-full lg:w-3/6 mx-auto mt-4 px-2 lg:px-0">
-        <!-- reply card 1 -->
-        <div
-          class="card-one bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12 w-5/6 ml-auto"
-        >
-          <div class="col-span-1">
-            <div
-              class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
-            >
-              <span class="font-semibold text-gray-400 text-sm">+</span>
-              <span class="text-blue-primary font-semibold text-sm">4</span>
-              <span class="font-semibold text-gray-400 text-xl leading-5"
-                >-</span
+        <div class="w-full lg:w-11/12 vertical-divider ml-auto">
+          <!-- reply card 1 -->
+          <div
+            class="card-one bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12 w-full lg:w-11/12 ml-auto"
+          >
+            <div class="col-span-1">
+              <div
+                class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
               >
-            </div>
-          </div>
-          <div class="col-span-11">
-            <div class="ml-4 flex justify-between items-center">
-              <div class="flex items-center space-x-2.5">
-                <img
-                  src="./assets/images/ram.PNG"
-                  alt="amy"
-                  class="w-8 h-8 rounded-full object-cover"
-                />
-                <h3 class="font-semibold text-black-secondary text-sm">
-                  ramsesmiron
-                </h3>
-                <p class="text-gray-primary text-sm">1 week ago</p>
-              </div>
-              <div class="flex items-center space-x-2">
-                <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
-                <p class="font-medium text-blue-primary text-sm">Reply</p>
-              </div>
-            </div>
-            <p class="ml-4 text-gray-primary text-sm mt-3">
-              <span class="text-sm text-blue-primary font-semibold"
-                >@maxblagun</span
-              >
-              If you're still new, I'd recommend focusing on the fundamentals of
-              HTML, CSS, and JS before considering React. It's very tempting to
-              jump ahead but lay a solid foundation first.
-            </p>
-          </div>
-        </div>
-        <!-- reply card 2 -->
-        <div
-          class="card-two bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12 mt-4 w-5/6 ml-auto"
-        >
-          <div class="col-span-1">
-            <div
-              class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
-            >
-              <span class="font-semibold text-gray-400 text-sm">+</span>
-              <span class="text-blue-primary font-semibold text-sm">2</span>
-              <span class="font-semibold text-gray-400 text-xl leading-5"
-                >-</span
-              >
-            </div>
-          </div>
-          <div class="col-span-11">
-            <div class="ml-4 flex justify-between items-center">
-              <div class="flex items-center space-x-2.5">
-                <img
-                  src="./assets/images/juli.PNG"
-                  alt="amy"
-                  class="w-7 h-7 rounded-full object-cover"
-                />
-                <h3 class="font-semibold text-black-secondary text-sm">
-                  juliusomo
-                </h3>
-                <p
-                  class="text-white rounded-sm bg-blue-primary py-0 px-2.5 text-sm"
+                <span class="font-semibold text-gray-400 text-sm">+</span>
+                <span class="text-blue-primary font-semibold text-sm">4</span>
+                <span class="font-semibold text-gray-400 text-xl leading-5"
+                  >-</span
                 >
-                  you
-                </p>
-                <p class="text-gray-primary text-sm">2 days ago</p>
-              </div>
-              <div class="flex items-center space-x-6">
-                <div class="flex items-center space-x-1">
-                  <svg
-                    width="12"
-                    height="13"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M1.167 12.448c0 .854.7 1.552 1.555 1.552h6.222c.856 0 1.556-.698 1.556-1.552V3.5H1.167v8.948Zm10.5-11.281H8.75L7.773 0h-3.88l-.976 1.167H0v1.166h11.667V1.167Z"
-                      fill="#ED6368"
-                    />
-                  </svg>
-                  <p class="font-medium text-sm text-red-500">Delete</p>
-                </div>
-                <div class="flex items-center space-x-1">
-                  <i
-                    class="fa fa-solid fa-pencil text-blue-primary text-sm"
-                  ></i>
-                  <p class="font-medium text-sm text-blue-primary">Edit</p>
-                </div>
               </div>
             </div>
-            <p class="ml-4 text-gray-primary text-sm mt-3">
-              <span class="text-sm text-blue-primary font-semibold"
-                >@ramsesmiron</span
+            <div class="col-span-11">
+              <div class="ml-4 flex justify-between items-center">
+                <div class="flex items-center space-x-2.5">
+                  <img
+                    src="./assets/images/ram.PNG"
+                    alt="amy"
+                    class="w-8 h-8 rounded-full object-cover"
+                  />
+                  <h3 class="font-semibold text-black-secondary text-sm">
+                    ramsesmiron
+                  </h3>
+                  <p class="text-gray-primary text-sm">1 week ago</p>
+                </div>
+                <div class="flex items-center space-x-2">
+                  <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
+                  <p class="font-medium text-blue-primary text-sm">Reply</p>
+                </div>
+              </div>
+              <p class="ml-4 text-gray-primary text-sm mt-3">
+                <span class="text-sm text-blue-primary font-semibold"
+                  >@maxblagun</span
+                >
+                If you're still new, I'd recommend focusing on the fundamentals
+                of HTML, CSS, and JS before considering React. It's very
+                tempting to jump ahead but lay a solid foundation first.
+              </p>
+            </div>
+          </div>
+          <!-- reply card 2 -->
+          <div
+            class="card-two bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12 mt-4 w-full lg:w-11/12 ml-auto"
+          >
+            <div class="col-span-1">
+              <div
+                class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
               >
-              I couldn't agree more with this. Everything moves so fast and it
-              always seems like everyone knows the newest library/ framework.
-              But the fundamentals are what stay constant.
-            </p>
+                <span class="font-semibold text-gray-400 text-sm">+</span>
+                <span class="text-blue-primary font-semibold text-sm">2</span>
+                <span class="font-semibold text-gray-400 text-xl leading-5"
+                  >-</span
+                >
+              </div>
+            </div>
+            <div class="col-span-11">
+              <div class="ml-4 flex justify-between items-center">
+                <div class="flex items-center space-x-2.5">
+                  <img
+                    src="./assets/images/juli.PNG"
+                    alt="amy"
+                    class="w-7 h-7 rounded-full object-cover"
+                  />
+                  <h3 class="font-semibold text-black-secondary text-sm">
+                    juliusomo
+                  </h3>
+                  <p
+                    class="text-white rounded-sm bg-blue-primary py-0 px-2.5 text-sm"
+                  >
+                    you
+                  </p>
+                  <p class="text-gray-primary text-sm">2 days ago</p>
+                </div>
+                <div class="flex items-center space-x-6">
+                  <div class="flex items-center space-x-1">
+                    <svg
+                      width="12"
+                      height="13"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.167 12.448c0 .854.7 1.552 1.555 1.552h6.222c.856 0 1.556-.698 1.556-1.552V3.5H1.167v8.948Zm10.5-11.281H8.75L7.773 0h-3.88l-.976 1.167H0v1.166h11.667V1.167Z"
+                        fill="#ED6368"
+                      />
+                    </svg>
+                    <p class="font-medium text-sm text-red-500">Delete</p>
+                  </div>
+                  <div class="flex items-center space-x-1">
+                    <i
+                      class="fa fa-solid fa-pencil text-blue-primary text-sm"
+                    ></i>
+                    <p class="font-medium text-sm text-blue-primary">Edit</p>
+                  </div>
+                </div>
+              </div>
+              <p class="ml-4 text-gray-primary text-sm mt-3">
+                <span class="text-sm text-blue-primary font-semibold"
+                  >@ramsesmiron</span
+                >
+                I couldn't agree more with this. Everything moves so fast and it
+                always seems like everyone knows the newest library/ framework.
+                But the fundamentals are what stay constant.
+              </p>
+            </div>
           </div>
         </div>
       </div>
