mobile responsive done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         >
           <div class="col-span-1">
             <div
-              class="w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+              class="lg:w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
             >
               <span class="font-semibold text-gray-400 text-sm">+</span>
               <span class="text-blue-primary font-semibold text-sm">12</span>
@@ -48,12 +48,14 @@
                   alt="amy"
                   class="w-8 h-8 rounded-full object-cover"
                 />
-                <h3 class="font-semibold text-black-secondary text-sm">
+                <h3
+                  class="font-semibold text-black-secondary text-sm cursor-pointer"
+                >
                   amyrobson
                 </h3>
                 <p class="text-gray-primary text-sm">1 month ago</p>
               </div>
-              <div class="flex items-center space-x-2">
+              <div class="flex items-center space-x-2 cursor-pointer">
                 <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
                 <p class="font-medium text-blue-primary text-sm">Reply</p>
               </div>
@@ -71,7 +73,7 @@
         >
           <div class="col-span-1">
             <div
-              class="w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+              class="lg:w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
             >
               <span class="font-semibold text-gray-400 text-sm">+</span>
               <span class="text-blue-primary font-semibold text-sm">5</span>
@@ -88,12 +90,14 @@
                   alt="amy"
                   class="w-7 h-7 rounded-full object-cover"
                 />
-                <h3 class="font-semibold text-black-secondary text-sm">
+                <h3
+                  class="font-semibold text-black-secondary text-sm cursor-pointer"
+                >
                   maxblagun
                 </h3>
                 <p class="text-gray-primary text-sm">2 weeks ago</p>
               </div>
-              <div class="flex items-center space-x-2">
+              <div class="flex items-center space-x-2 cursor-pointer">
                 <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
                 <p class="font-medium text-blue-primary text-sm">Reply</p>
               </div>
@@ -116,7 +120,7 @@
           >
             <div class="col-span-1">
               <div
-                class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+                class="lg:w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
               >
                 <span class="font-semibold text-gray-400 text-sm">+</span>
                 <span class="text-blue-primary font-semibold text-sm">4</span>
@@ -133,18 +137,21 @@
                     alt="amy"
                     class="w-8 h-8 rounded-full object-cover"
                   />
-                  <h3 class="font-semibold text-black-secondary text-sm">
+                  <h3
+                    class="font-semibold text-black-secondary text-sm cursor-pointer"
+                  >
                     ramsesmiron
                   </h3>
                   <p class="text-gray-primary text-sm">1 week ago</p>
                 </div>
-                <div class="flex items-center space-x-2">
+                <div class="flex items-center space-x-2 cursor-pointer">
                   <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
                   <p class="font-medium text-blue-primary text-sm">Reply</p>
                 </div>
               </div>
               <p class="ml-4 text-gray-primary text-sm mt-3">
-                <span class="text-sm text-blue-primary font-semibold"
+                <span
+                  class="text-sm text-blue-primary font-semibold cursor-pointer"
                   >@maxblagun</span
                 >
                 If you're still new, I'd recommend focusing on the fundamentals
@@ -159,7 +166,7 @@
           >
             <div class="col-span-1">
               <div
-                class="w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+                class="lg:w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
               >
                 <span class="font-semibold text-gray-400 text-sm">+</span>
                 <span class="text-blue-primary font-semibold text-sm">2</span>
@@ -169,14 +176,18 @@
               </div>
             </div>
             <div class="col-span-11">
-              <div class="ml-4 flex justify-between items-center">
+              <div
+                class="ml-4 flex justify-between items-center flex-col lg:flex-row"
+              >
                 <div class="flex items-center space-x-2.5">
                   <img
                     src="./assets/images/juli.PNG"
                     alt="amy"
                     class="w-7 h-7 rounded-full object-cover"
                   />
-                  <h3 class="font-semibold text-black-secondary text-sm">
+                  <h3
+                    class="font-semibold text-black-secondary text-sm cursor-pointer"
+                  >
                     juliusomo
                   </h3>
                   <p
@@ -186,8 +197,10 @@
                   </p>
                   <p class="text-gray-primary text-sm">2 days ago</p>
                 </div>
-                <div class="flex items-center space-x-6">
-                  <div class="flex items-center space-x-1">
+                <div
+                  class="flex items-center space-x-3 lg:space-x-6 mt-2 lg:mt-0 ml-36 lg:ml-0"
+                >
+                  <div class="flex items-center space-x-1 cursor-pointer">
                     <svg
                       width="12"
                       height="13"
@@ -200,7 +213,7 @@
                     </svg>
                     <p class="font-medium text-sm text-red-500">Delete</p>
                   </div>
-                  <div class="flex items-center space-x-1">
+                  <div class="flex items-center space-x-1 cursor-pointer">
                     <i
                       class="fa fa-solid fa-pencil text-blue-primary text-sm"
                     ></i>
@@ -209,7 +222,8 @@
                 </div>
               </div>
               <p class="ml-4 text-gray-primary text-sm mt-3">
-                <span class="text-sm text-blue-primary font-semibold"
+                <span
+                  class="text-sm text-blue-primary font-semibold cursor-pointer"
                   >@ramsesmiron</span
                 >
                 I couldn't agree more with this. Everything moves so fast and it
@@ -243,6 +257,7 @@
           </button>
         </div>
       </div>
+      <div class="lg:hidden h-4"></div>
     </div>
 
     <!-- scripts -->
