dark mode added

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <div class="w-full lg:w-3/6 mx-auto mt-20 px-2 lg:px-0">
         <!-- card 1 -->
         <div
-          class="card-one bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12"
+          class="card-one bg-white dark:bg-gray-400 shadow rounded-lg p-5 pb-5 grid grid-cols-12"
         >
           <div class="col-span-1">
             <div
-              class="lg:w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+              class="lg:w-3/5 mx-auto bg-gray-100 dark:bg-gray-300 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
             >
               <span class="font-semibold text-gray-400 text-sm">+</span>
               <span class="text-blue-primary font-semibold text-sm">12</span>
@@ -53,14 +53,16 @@
                 >
                   amyrobson
                 </h3>
-                <p class="text-gray-primary text-sm">1 month ago</p>
+                <p class="text-gray-primary text-sm dark:text-gray-300">
+                  1 month ago
+                </p>
               </div>
               <div class="flex items-center space-x-2 cursor-pointer">
                 <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
                 <p class="font-medium text-blue-primary text-sm">Reply</p>
               </div>
             </div>
-            <p class="ml-4 text-gray-primary text-sm mt-3">
+            <p class="ml-4 text-gray-primary text-sm mt-3 dark:text-gray-300">
               Impressive! Though it seems the drag feature could be improved.
               But overall it looks incredible. You've nailed the design and the
               responsiveness at various breakpoints works really well.
@@ -69,11 +71,11 @@
         </div>
         <!-- card 2 -->
         <div
-          class="card-two bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12 mt-4"
+          class="card-two bg-white dark:bg-gray-400 shadow rounded-lg p-5 pb-5 grid grid-cols-12 mt-4"
         >
           <div class="col-span-1">
             <div
-              class="lg:w-3/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+              class="lg:w-3/5 mx-auto bg-gray-100 dark:bg-gray-300 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
             >
               <span class="font-semibold text-gray-400 text-sm">+</span>
               <span class="text-blue-primary font-semibold text-sm">5</span>
@@ -95,14 +97,16 @@
                 >
                   maxblagun
                 </h3>
-                <p class="text-gray-primary text-sm">2 weeks ago</p>
+                <p class="text-gray-primary text-sm dark:text-gray-300">
+                  2 weeks ago
+                </p>
               </div>
               <div class="flex items-center space-x-2 cursor-pointer">
                 <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
                 <p class="font-medium text-blue-primary text-sm">Reply</p>
               </div>
             </div>
-            <p class="ml-4 text-gray-primary text-sm mt-3">
+            <p class="ml-4 text-gray-primary text-sm mt-3 dark:text-gray-300">
               Woah, your project looks awesome! How long have you been coding
               for? I'm still new, but think I want to dive into React as well
               soon. Perhaps you can give me an insight on where I can learn
@@ -116,11 +120,11 @@
         <div class="w-full lg:w-11/12 vertical-divider ml-auto">
           <!-- reply card 1 -->
           <div
-            class="card-one bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12 w-full lg:w-11/12 ml-auto"
+            class="card-one bg-white dark:bg-gray-400 shadow rounded-lg p-5 pb-5 grid grid-cols-12 w-full lg:w-11/12 ml-auto"
           >
             <div class="col-span-1">
               <div
-                class="lg:w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+                class="lg:w-3/4 mx-auto bg-gray-100 dark:bg-gray-300 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
               >
                 <span class="font-semibold text-gray-400 text-sm">+</span>
                 <span class="text-blue-primary font-semibold text-sm">4</span>
@@ -142,14 +146,16 @@
                   >
                     ramsesmiron
                   </h3>
-                  <p class="text-gray-primary text-sm">1 week ago</p>
+                  <p class="text-gray-primary text-sm dark:text-gray-300">
+                    1 week ago
+                  </p>
                 </div>
                 <div class="flex items-center space-x-2 cursor-pointer">
                   <i class="fa fa-solid fa-reply text-[#5459b7] text-sm"></i>
                   <p class="font-medium text-blue-primary text-sm">Reply</p>
                 </div>
               </div>
-              <p class="ml-4 text-gray-primary text-sm mt-3">
+              <p class="ml-4 text-gray-primary text-sm mt-3 dark:text-gray-300">
                 <span
                   class="text-sm text-blue-primary font-semibold cursor-pointer"
                   >@maxblagun</span
@@ -162,11 +168,11 @@
           </div>
           <!-- reply card 2 -->
           <div
-            class="card-two bg-white shadow rounded-lg p-5 pb-5 grid grid-cols-12 mt-4 w-full lg:w-11/12 ml-auto"
+            class="card-two bg-white dark:bg-gray-400 shadow rounded-lg p-5 pb-5 grid grid-cols-12 mt-4 w-full lg:w-11/12 ml-auto"
           >
             <div class="col-span-1">
               <div
-                class="lg:w-4/5 mx-auto bg-gray-100 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
+                class="lg:w-4/5 mx-auto bg-gray-100 dark:bg-gray-300 flex flex-col space-y-2 justify-center items-center rounded-md py-1"
               >
                 <span class="font-semibold text-gray-400 text-sm">+</span>
                 <span class="text-blue-primary font-semibold text-sm">2</span>
@@ -191,11 +197,13 @@
                     juliusomo
                   </h3>
                   <p
-                    class="text-white rounded-sm bg-blue-primary py-0 px-2.5 text-sm"
+                    class="text-white rounded-sm bg-blue-primary py-0 px-2.5 text-sm dark:text-gray-300"
                   >
                     you
                   </p>
-                  <p class="text-gray-primary text-sm">2 days ago</p>
+                  <p class="text-gray-primary text-sm dark:text-gray-300">
+                    2 days ago
+                  </p>
                 </div>
                 <div
                   class="flex items-center space-x-3 lg:space-x-6 mt-2 lg:mt-0 ml-36 lg:ml-0"
@@ -211,17 +219,25 @@
                         fill="#ED6368"
                       />
                     </svg>
-                    <p class="font-medium text-sm text-red-500">Delete</p>
+                    <p
+                      class="font-medium text-sm text-red-500 dark:text-gray-300"
+                    >
+                      Delete
+                    </p>
                   </div>
                   <div class="flex items-center space-x-1 cursor-pointer">
                     <i
                       class="fa fa-solid fa-pencil text-blue-primary text-sm"
                     ></i>
-                    <p class="font-medium text-sm text-blue-primary">Edit</p>
+                    <p
+                      class="font-medium text-sm text-blue-primary dark:text-gray-300"
+                    >
+                      Edit
+                    </p>
                   </div>
                 </div>
               </div>
-              <p class="ml-4 text-gray-primary text-sm mt-3">
+              <p class="ml-4 text-gray-primary text-sm mt-3 dark:text-gray-300">
                 <span
                   class="text-sm text-blue-primary font-semibold cursor-pointer"
                   >@ramsesmiron</span
@@ -237,7 +253,7 @@
       <!-- comment box-->
       <div class="w-full lg:w-3/6 mx-auto mt-4 px-2 lg:px-0">
         <div
-          class="comment-box bg-white shadow rounded-lg p-5 pb-5 flex space-x-2"
+          class="comment-box bg-white dark:bg-gray-400 shadow rounded-lg p-5 pb-5 flex space-x-2"
         >
           <img
             src="./assets/images/juli.PNG"
@@ -245,13 +261,13 @@
             class="w-9 h-9 rounded-full object-cover"
           />
           <textarea
-            class="h-20 resize-none focus:outline-none w-full border-2 border-gray-100 px-2 pt-1 text-sm text-gray-primary rounded-md"
+            class="h-20 resize-none focus:outline-none w-full border-2 border-gray-100 dark:border-gray-200 px-2 pt-1 text-sm text-gray-primary rounded-md dark:bg-gray-300"
             placeholder="Add a comment..."
           ></textarea>
 
           <button
             type="button"
-            class="text-white bg-blue-primary text-xs font-semibold py-2 px-4 h-8 rounded-md"
+            class="text-white bg-blue-primary text-xs font-semibold py-2 px-4 h-8 rounded-md dark:text-gray-300"
           >
             SEND
           </button>
